--- a/HittaLekparker/HittaLekparker/MainPage.xaml
+++ b/HittaLekparker/HittaLekparker/MainPage.xaml
@@ -2,10 +2,28 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:HittaLekparker"
-             x:Class="HittaLekparker.MainPage">
+             x:Class="HittaLekparker.MainPage"
+             Title="Hitta Lekpark">
 
-	<Label Text="Welcome to Xamarin.Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
-
+    <StackLayout Padding="5">
+	<Label FontAttributes="Bold" Text="Sök här.." 
+           VerticalOptions="Start" 
+           HorizontalOptions="Center" 
+           x:Name="infoLabel"/>
+       
+        <Entry x:Name="textEntry"
+           BackgroundColor="Azure"
+            ></Entry>
+        <Button x:Name="searchBtn" Text="Sök" Clicked="searchBtn_Clicked"></Button>
+        
+        <ListView x:Name="result"
+                 HasUnevenRows="True">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding Name}"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+            
+        </ListView>
+    </StackLayout>
 </ContentPage>
